--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@ function topFunction() {
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="#home">Navigation</a>
+          <a href="#home">Home</a>
         </li>
 	   <li>
-          <a href="#gal">Navigation</a>
+          <a href="#gal">Photos</a>
 		  </li>
 	  	<li>
-          <a href="#tl">Navigation</a>
+          <a href="#tl">Video</a>
         </li>
         <li>
-          <a href="#vid">Navigation</a>
+          <a href="#vid">Gifs</a>
 			</li>
       <li>
-          <a href="#num">Navigation</a>
+          <a href="#num">Data</a>
 			</li>
       </ul>
 </nav>
