--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@ data-cycle-pause-on-hover="true"
 data-cycle-speed="200">
 <div class="cycle-prev"></div>
 <div class="cycle-next"></div>
-<img src="img/1.jpg" width="100%" height="100%" alt="caption"/>
+<img src="img/1.jpg" width="100%" height="100%" alt="“I don’t like to express my emotions. I don’t want people to think I’m vulnerable or easy to be manipulated. When I’m alone I definitely let my emotions run wild.” - Computer science sophomore Tymon Vu. 
+"/>
 <img src="img/2.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/3.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/4.jpg" width="100%" height="100%" alt="caption"/>
