--- a/index.html
+++ b/index.html
@@ -173,7 +173,12 @@ data-cycle-speed="200">
 <div class="cycle-prev"></div>
 <div class="cycle-next"></div>
 <img src="img/1.jpg" width="100%" height="100%" alt="“I don’t like to express my emotions. I don’t want people to think I’m vulnerable or easy to be manipulated. When I’m alone I definitely let my emotions run wild.” - Computer science sophomore Tymon Vu. How could society teach boys that “feminine” qualities are human qualities?"/>
-<img src="img/2.jpg" width="100%" height="100%" alt="caption"/>
+<img src="img/2.jpg" width="100%" height="100%" alt="Vu reached for a basketball hoop outside of his apartment in PCV on campus on April 25, 2023. 
+
+If a boy does not meet the narrow definition of what it means to be a man they often will become a target of bullying. For example, masculine men are traditionally known as tall and muscular.
+Starting at an early age, Vu was the subject of bullying. The things other boys would say to him will be carried in his mind for the rest of his life.
+
+“I definitely do say that some kids have bullied me but more for my race because I’m asian. It’s normally the guys and with my race then comes more bullying like ha your short, or ha you can’t see.” - Computer science sophomore Tymon Vu. "/>
 <img src="img/3.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/4.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/5.jpg" width="100%" height="100%" alt="caption"/>
