--- a/index.html
+++ b/index.html
@@ -179,14 +179,62 @@ If a boy does not meet the narrow definition of what it means to be a man they o
 Starting at an early age, Vu was the subject of bullying. The things other boys would say to him will be carried in his mind for the rest of his life.
 
 “I definitely do say that some kids have bullied me but more for my race because I’m asian. It’s normally the guys and with my race then comes more bullying like ha your short, or ha you can’t see.” - Computer science sophomore Tymon Vu. "/>
-<img src="img/3.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/4.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/5.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/6.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/7.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/8.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/9.jpg" width="100%" height="100%" alt="caption"/>
-<img src="img/10.jpg" width="100%" height="100%" alt="caption"/>
+<img src="img/3.jpg" width="100%" height="100%" alt="Vu walks alone in his thoughts along a sidewalk on Cal Poly’s campus on April 25, 2023.
+
+Vu uses humor as a defense mechanism to reflect the mean things other boys would say to him. Tymon developed this mechanism as a child and continues to use it with other boys at Cal Poly. Many boys resort to putting on a fake smile and making others laugh to meet the societal expectation of staying strong.
+
+“I basically resort to humor and try to make it funny. So instead of them laughing at me they are laughing with me.” - Computer science sophomore Tymon Vu.
+
+Vu says that concealing his emotions for so long often leads to a lonely feeling. He believes that in order to redefine what it means to “be a man” then young boys must be taught vulnerability."/>
+<img src="img/4.jpg" width="100%" height="100%" alt="Computer science sophomore Liam Kbidy walks on top of a parking structure in Poly Canyon Village to play his guitar on April 25, 2023.
+
+The societal pressures that push boys to conceal their emotions has led to a national epidemic of suicide among boys. In 2021, males made up nearly 80% of suicides, according to the Centers for Disease control and prevention. 
+
+Kbidy struggles with feeling like he does not have a support system in San Luis Obispo. His male peers do not provide him with the support he craves.
+
+He believes that society must strive towards teaching boys starting at a young age that expressing emotions is healthy. Kbidy visits a therapist regularly to be in touch with his emotions and engages in hobbies that make him happy."/>
+<img src="img/5.jpg" width="100%" height="100%" alt="Computer science sophomore Liam Kbidy strummed his guitar at the top of a parking structure in Poly Canyon Village on April 25, 2023. 
+
+“It's a lot of fake it til you make it and I think that kind of shapes people to be and guys especially to kind of portray what they imagine people want rather than who they feel they are.” - Computer science sophomore Liam Kbidy
+
+Kbidy says that he has been struggling with his mental health at Cal Poly because he feels like he can’t talk to anyone about his feelings. He believes that boys often pretend to be someone they are not which contributes to mental health issues.
+
+Kbidy has redefined masculinity to be true to himself. Masculinity is a social construct and can be constructed to apply to all men if they wish. "/>
+<img src="img/6.jpg" width="100%" height="100%" alt="Computer science sophomore Liam Kbidy strummed his guitar on top of a parking structure in Poly Canyon Village on April 25, 2023.
+
+Kbidy uses his guitar as an outlet for his mental health and engages in positive masculinity. In order to redefine what it means to “be a man”, generational teachings must be reversed. "/>
+<img src="img/7.jpg" width="100%" height="100%" alt="Computer science sophomore Liam Kbidy was on a hill during his run at Cal Poly’s Architecture Graveyard on Cal Poly’s campus on April 28, 2023.
+
+Kbidy engages in positive masculinity through taking care of his mental health through fitness. A traditional association with masculinity is to be strong. This is a positive aspect of masculinity.
+
+On the contrary, being active and strong does not equate to the emotional outlet humans need to avoid spiraling into depression."/>
+<img src="img/8.jpg" width="100%" height="100%" alt="Computer science sophomore Liam Kbidy smiled in front of a field of flowers outside of his apartment in Cal Poly’s Poly Canyon Village on April 25, 2023.
+
+Kbidy is originally from a small volcanic island in France on the other side of the world off the coast of madagascar. 
+
+“The way men act around here is kinda fed off of a more patriotic image that we kinda see with the more american person ideology”
+
+He says that masculinity is not much different there than it is in America but more “toxic masculinity” exists here. He believes that boys and men should break away from the labels society assigns them and define masculinity for themselves. "/>
+<img src="img/9.jpg" width="100%" height="100%" alt="Environmental earth and social science senior Sean Moran sat on his bike on the side of the road about to take a ride on April 25, 2023.
+
+“I’m a really sensitive and emotional person and a lot of guys didn’t really interact that way. And I never really liked that so I ended up around girls. I think I was bullied because I was around girls.” - Environmental earth and social science senior Sean Moran.
+
+Moran provides a perfect example of someone who is redefining what it means “to be a man.” He embraces things considered “feminine” like showing vulnerability.
+
+He embraces positive masculinity through seeking help for his mental health, having confidence in himself, and is physically strong. He also loves the color pink!"/>
+<img src="img/10.jpg" width="100%" height="100%" alt="Environmental earth and social science senior Sean Moran rode his bike down a street in San Luis Obispo on April 25, 2023.
+
+Moran is on the Cal Poly triathlon team where he nurtures his love for fitness. Similar to Kbidy, Moran engages in positive masculinity through exercising which has a positive effect on his mental health. Moran also attends therapy sessions regularly for his mental health.
+
+These boys exemplify two major points.
+Societal pressures burden boys to fit the narrow definition of masculinity.
+Society is making steps towards defining masculinity in a positive manner including teaching boys to: 
+Show vulnerability and express emotions
+Ask for help when needed
+Check in with male peers
+Value women and “feminine” qualities
+
+Societal pressures burden boys to behave a certain way. Instead of accepting the ideals pushed by the media and society, some men are taking strides towards defining masculinity for themselves."/>
 </div><!--end of slideshow-->
 <!--beginning of slideshow caption-->
 <div id="alt-caption" class="center">
