--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Societal pressures burden boys to behave a certain way. Instead of accepting the
 	
 <!--beginning of audio section-->
 <div class="row">
-<h1 id="tl">Audio Board</h1>
+<h1 id="tl">What has someone told you that affected your perception of what it means to be a man?</h1>
 <article>
   <p class="tab">Click on images to hear responses (double-click to pause audio). </p>
   <div class="table">
