--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function topFunction() {
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
-<h2 id="gal">Heading</h2>
+<h2 id="gal">Male students at Cal Poly are redefining masculinity for themselves.</h2>
 <article><!--beginning of article-->
 <p class="tab">Blurb</p>
 <!--beginning of slideshow-->
