--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ function topFunction() {
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
-<h2 id="gal">Male students at Cal Poly are redefining masculinity for themselves.</h2>
+<h2 id="gal">Redefining Masculinity</h2>
 <article><!--beginning of article-->
-<p class="tab">Blurb</p>
+<p class="tab">Male students at Cal Poly are redefining masculinity for themselves.</p>
 <!--beginning of slideshow-->
 <div id="slider"
 data-cycle-caption="#alt-caption"
