--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Your browser does not support the video tag.
 
 <!--beginning of infographic section-->
 <div class="row whiteBG">
-<h2 id="num">Heading</h2>
+<h2 id="num">Infographic</h2>
 <article>
 <p class="tab"></p>
 <<div class="infogram-embed" data-id="e713367b-2597-4978-94da-9b50b4fb4f97" data-type="interactive" data-title="Infographic Modern"></div><script>!function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n)){var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogram.com/e713367b-2597-4978-94da-9b50b4fb4f97" style="color:#989898!important;text-decoration:none!important;" target="_blank">Infographic Modern</a><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div>>
