--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@ Societal pressures burden boys to behave a certain way. Instead of accepting the
 
 <!--beginning of video section-->
 <div class="row orangeBG">
-<h2 id="vid">Heading</h2>
+<h2 id="vid">It's never too late to define masculinity for yourself.</h2>
 <article>
-<p class="tab">Blurb</p>	
+<p class="tab">Mark Carman overcame many obstacles and graduated from CSU Monterey Bay with a degree in Social Work.</p>	
 <video width="100%" height="100%" poster="img/poster.jpg" controls>
 <source src="img/video.mp4" type="video/mp4">
 Your browser does not support the video tag.
