--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Societal pressures burden boys to behave a certain way. Instead of accepting the
 <!--end of audio section-->
     
 <!--beginning of parallax image-->
-<div class="parallax responsive" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
 </div>
 <!--end of parallax image-->
 
