--- a/index.html
+++ b/index.html
@@ -143,9 +143,15 @@ function topFunction() {
     
 <!--main image-->
 <div class="container">
+  <img src="main.jpg" alt="Your Photo">
+  <div class="overlay">
+    <h1 class="animated-text">Masculinity</h1>
+  </div>
 </div>
 <!--animated welcome-->
 <div class="wrapper">
+  <h2 class="typewriter-text">Masculinity</h2>
+</div>
 <!--animated welcome code here-->	
 </div>
     
