--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function topFunction() {
     
 <!--main image-->
 <div class="container">
-  <img src="main.jpg" alt="Your Photo">
+  <img src="main.jpg">
   <div class="overlay">
     <h1 class="animated-text">Masculinity</h1>
   </div>
