--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Your browser does not support the video tag.
 <!--end of infographic section-->
 	
 <!--beginning of footer-->
-<footer>Site Name Here | San Luis Obispo, CA | <a href="mailto: email@email.com?Subject=Inquiry" target="_top">Send Email</a> | Copyright 20__ | Site by You 
+<footer>Masculinity | San Luis Obispo, CA | <a href="mailto: jgriff26@calpoly.edu?Subject=Inquiry" target="_top">Send Email</a> | Copyright 20__ | Site by Jada Griffith 
 </footer>
 <!--end of footer-->
 	
