--- a/index.html
+++ b/index.html
@@ -156,14 +156,19 @@ function topFunction() {
 </div>
     
 <!--beginning of main content area-->
-<div class="row whiteBG">
-<h2 id="home">Welcome</h2>
+<div class="row backness">
+<h2 id="home">Important to note: Masculinity as a whole is not inherently toxic.</h2>
 <article>
-<p class="tab">I would like to preface this project by saying that masculinity as a whole is not inherently toxic, nor does it lead to depression. There is healthy masculinity and there is also unhealthy masculinity. Societal pressures present boys with a narrow definition of what it means to “be a man.” Fitting all boys into a box can leave lasting damage. Rather than teaching boys how “to be a man”, perhaps society must redefine masculinity and show boys what it means to be a human.<br><br>Cal Poly San Luis Obispo has over 20,000 students enrolled with diverse life experiences. Many boys feel restricted to behave in a manner that fits the societal expectations of masculinity in college. It’s innate among humans to want to fit in. Some Cal Poly students recognize the societal expectations burdening them and are redefining masculinity in a healthy way.
+<p class="tab"> <br><br>In fact, masculinity is awesome and healthy masculinity should be embraced. Societal pressures present boys with a narrow definition of what it means to “be a man.” This has had a serious effect on the well-being of men in our society. Young men are falling behind in school, relationships, are being incarcerated at higher rates, and are experiencing higher rates of depression. Rather than teaching boys how “to be a man”, perhaps society must redefine masculinity and show boys what it means to be a human.
 </p>
-<p class="tab"><a href="#gal">Navigation</a></p>
+<p class="tab"><a href="#tl">Man on the Street</a></p>
 </article>
 </div>
+
+<!--beginning of parallax image-->
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/px2.png">
+</div>
+<!--end of parallax image-->
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
