--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@ function topFunction() {
     <h1 class="animated-text">Masculinity</h1>
   </div>
 </div>
+<div class="text-container">
+  <p>Young men are falling</p>
+</div>
 <!--animated welcome code here-->	
 </div>
     
