--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ function topFunction() {
     <h1 class="animated-text">Masculinity</h1>
   </div>
 </div>
-<div class="text-container">
+
+<div class="text-overlay">
   <p>Young men are falling</p>
 </div>
 <!--animated welcome code here-->	
