--- a/index.html
+++ b/index.html
@@ -169,6 +169,35 @@ function topFunction() {
 <div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
 </div>
 <!--end of parallax image-->
+	
+<!--beginning of audio section-->
+<div class="row videoness">
+<h2 id="tl">WHAT WORDS AFFECTED YOUR PERCEPTION OF WHAT IT MEANS TO "BE A MAN" GROWING UP?</h2>
+<article>
+<p class="tab">Click on images to hear student responses...<br>(Double-click to pause)</p>
+<div class="table">
+	<div id="trip">
+<audio id="audio_2">
+<source src="audio/2.mp3" type="audio/mpeg" />
+</audio>
+<audio id="audio_3">
+<source src="audio/3.mp3" type="audio/mpeg" />
+</audio>
+<audio id="audio_1">
+	<source src="audio/1.mp3" type="audio/mpeg" />
+</audio>
+<img src="img/rollover/1.gif" class="rollover" alt="description" onMouseOver= "this.src='img/rollover/1.gif'" onMouseOut="this.src='img/rollover/1.jpg'" onClick="document.getElementById('audio_1').play(); return false;" onDblClick="document.getElementById('audio_1').pause(); return false;">		
+/&gt;
+<img src="img/rollover/2.gif" class="rollover" alt="description" onMouseOver="this.src='img/rollover/2.gif'" onMouseOut= "this.src='img/rollover/2.jpg'" onClick="document.getElementById('audio_2').play(); return false;" onDblClick="document.getElementById('audio_e').pause(); return false;">
+/&gt;
+<img src="img/rollover/3.gif" class="rollover" alt="description" onMouseOver="this.src='img/rollover/3.gif'" onMouseOut="this.src='img/rollover/3.jpg'" onClick="document.getElementById('audio_3').play(); return false;" onDblClick="document.getElementById('audio_3').pause(); return false;">
+/&gt;
+	</div>
+</div>
+<p class="tab"><a href="#vid">Masculinity & Addiction</a></p>		
+</article>
+</div>
+<!--end of audio section-->
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
