--- a/index.html
+++ b/index.html
@@ -142,16 +142,20 @@ function topFunction() {
 <!--end of navigation section-->
     
 <!--main image-->
-<div class="container">
+<div class="container container-1">
   <img src="main.jpg">
   <div class="overlay">
     <h1 class="animated-text">Masculinity</h1>
   </div>
 </div>
 
-<div class="text-overlay">
-  <p>Young men are falling</p>
+<div class="container container-2">
+  <img src="main.jpg">
+  <div class="overlay">
+    <p>Young men are falling</p>
+  </div>
 </div>
+	
 <!--animated welcome code here-->	
 </div>
     
