--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function topFunction() {
 <div class="container container-2">
   <img src="main.jpg">
   <div class="overlay">
-    <p>Young men are falling</p>
+     <h1 class="animated-text-1">Young men are falling.</h1>
   </div>
 </div>
 	
