--- a/index.html
+++ b/index.html
@@ -142,17 +142,10 @@ function topFunction() {
 <!--end of navigation section-->
     
 <!--main image-->
-<div class="container container-1">
+<div class="container">
   <img src="main.jpg">
   <div class="overlay">
-    <h1 class="animated-text">Masculinity</h1>
-  </div>
-</div>
-
-<div class="container container-2">
-  <img src="main.jpg">
-  <div class="overlay">
-     <h1 class="animated-text-1">Young men are falling.</h1>
+    <h1 class="text-overlay">Young men are falling.</h1>
   </div>
 </div>
 	
