--- a/index.html
+++ b/index.html
@@ -153,14 +153,13 @@ function topFunction() {
 </div>
     
 <!--beginning of main content area-->
-<div class="row backness">
-<h2 id="home">Important to note: Masculinity as a whole is not inherently toxic.</h2>
-<article>
-<p class="tab"> <br><br>In fact, masculinity is awesome and healthy masculinity should be embraced. Societal pressures present boys with a narrow definition of what it means to “be a man.” This has had a serious effect on the well-being of men in our society. Young men are falling behind in school, relationships, are being incarcerated at higher rates, and are experiencing higher rates of depression. Rather than teaching boys how “to be a man”, perhaps society must redefine masculinity and show boys what it means to be a human.
+<div class="row">
+  <h2 id="home">Important to note: Masculinity as a whole is not inherently toxic.</h2>
+  <p class="tab"> <br><br>In fact, masculinity is awesome and healthy masculinity should be embraced. Societal pressures present boys with a narrow definition of what it means to “be a man.” This has had a serious effect on the well-being of men in our society. Young men are falling behind in school, relationships, are being incarcerated at higher rates, and are experiencing higher rates of depression. Rather than teaching boys how “to be a man”, perhaps society must redefine masculinity and show boys what it means to be a human.
 </p>
-<p class="tab"><a href="#tl">Man on the Street</a></p>
-</article>
+	<p class="tab"><a href="#tl">Man on the Street</a></p>
 </div>
+<div class="row backness">
 
 <!--beginning of parallax image-->
 <div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
