--- a/index.html
+++ b/index.html
@@ -168,30 +168,36 @@ function topFunction() {
 	
 <!--beginning of audio section-->
 <div class="row videoness">
-<h2 id="tl">WHAT WORDS AFFECTED YOUR PERCEPTION OF WHAT IT MEANS TO "BE A MAN" GROWING UP?</h2>
-<article>
-<p class="tab">Click on images to hear student responses...<br>(Double-click to pause)</p>
-<div class="table">
-	<div id="trip">
-<audio id="audio_2">
-<source src="audio/2.mp3" type="audio/mpeg" />
-</audio>
-<audio id="audio_3">
-<source src="audio/3.mp3" type="audio/mpeg" />
-</audio>
-<audio id="audio_1">
-	<source src="audio/1.mp3" type="audio/mpeg" />
-</audio>
-<img src="img/rollover/1.gif" class="rollover" alt="description" onMouseOver= "this.src='img/rollover/1.gif'" onMouseOut="this.src='img/rollover/1.jpg'" onClick="document.getElementById('audio_1').play(); return false;" onDblClick="document.getElementById('audio_1').pause(); return false;">		
-/&gt;
-<img src="img/rollover/2.gif" class="rollover" alt="description" onMouseOver="this.src='img/rollover/2.gif'" onMouseOut= "this.src='img/rollover/2.jpg'" onClick="document.getElementById('audio_2').play(); return false;" onDblClick="document.getElementById('audio_e').pause(); return false;">
-/&gt;
-<img src="img/rollover/3.gif" class="rollover" alt="description" onMouseOver="this.src='img/rollover/3.gif'" onMouseOut="this.src='img/rollover/3.jpg'" onClick="document.getElementById('audio_3').play(); return false;" onDblClick="document.getElementById('audio_3').pause(); return false;">
-/&gt;
-	</div>
-</div>
-<p class="tab"><a href="#vid">Masculinity & Addiction</a></p>		
-</article>
+  <h2 id="tl">WHAT WORDS AFFECTED YOUR PERCEPTION OF WHAT IT MEANS TO "BE A MAN" GROWING UP?</h2>
+  <article>
+    <p class="tab">Click on images to hear student responses...<br>(Double-click to pause)</p>
+    <div class="table">
+      <div id="trip">
+        <audio id="audio_2">
+          <source src="audio/2.mp3" type="audio/mpeg" />
+        </audio>
+        <audio id="audio_3">
+          <source src="audio/3.mp3" type="audio/mpeg" />
+        </audio>
+        <audio id="audio_1">
+          <source src="audio/1.mp3" type="audio/mpeg" />
+        </audio>
+        <div class="rollover-container">
+          <img id="gif_1" src="img/rollover/1.gif" class="rollover" alt="description" onmouseover="this.src='img/rollover/1.gif'" onmouseout="this.src='img/rollover/1.gif'; document.getElementById('image_1').style.display = 'none'" onclick="document.getElementById('audio_1').play(); return false;" ondblclick="document.getElementById('audio_1').pause(); return false;">
+          <img id="image_1" src="img/rollover/1.jpg" class="image-overlay" alt="description">
+        </div>
+        <div class="rollover-container">
+          <img id="gif_2" src="img/rollover/2.gif" class="rollover" alt="description" onmouseover="this.src='img/rollover/2.gif'" onmouseout="this.src='img/rollover/2.gif'; document.getElementById('image_2').style.display = 'none'" onclick="document.getElementById('audio_2').play(); return false;" ondblclick="document.getElementById('audio_e').pause(); return false;">
+          <img id="image_2" src="img/rollover/2.jpg" class="image-overlay" alt="description">
+        </div>
+        <div class="rollover-container">
+          <img id="gif_3" src="img/rollover/3.gif" class="rollover" alt="description" onmouseover="this.src='img/rollover/3.gif'" onmouseout="this.src='img/rollover/3.gif'; document.getElementById('image_3').style.display = 'none'" onclick="document.getElementById('audio_3').play(); return false;" ondblclick="document.getElementById('audio_3').pause(); return false;">
+          <img id="image_3" src="img/rollover/3.jpg" class="image-overlay" alt="description">
+        </div>
+      </div>
+    </div>
+    <p class="tab"><a href="#vid">Masculinity & Addiction</a></p>		
+  </article>
 </div>
 <!--end of audio section-->
 
