--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function topFunction() {
           <img id="image_1" src="img/rollover/1.jpg" class="image-overlay" alt="description">
         </div>
         <div class="rollover-container">
-          <img id="gif_2" src="img/rollover/2.gif" class="rollover" alt="description" onmouseover="this.src='img/rollover/2.gif'" onmouseout="this.src='img/rollover/2.gif'; document.getElementById('image_2').style.display = 'none'" onclick="document.getElementById('audio_2').play(); return false;" ondblclick="document.getElementById('audio_e').pause(); return false;">
+          <img id="gif_2" src="img/rollover/2.gif" class="rollover" alt="description" onmouseover="this.src='img/rollover/2.gif'" onmouseout="this.src='img/rollover/2.gif'; document.getElementById('image_2').style.display = 'none'" onclick="document.getElementById('audio_2').play(); return false;" ondblclick="document.getElementById('audio_2').pause(); return false;">
           <img id="image_2" src="img/rollover/2.jpg" class="image-overlay" alt="description">
         </div>
         <div class="rollover-container">
