--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function topFunction() {
     
 <!--main image-->
 <div class="container">
-  <img src="main.jpg">
+  <img src="img/main.jpg">
 	</div>
 <!--animated welcome code here-->	
 </div>
