--- a/index.html
+++ b/index.html
@@ -143,8 +143,11 @@ function topFunction() {
     
 <!--main image-->
 <div class="container">
-  <img src="img/main.jpg">
-	</div>
+  <img src="main.jpg">
+  <div class="overlay">
+    <h1 class="text-overlay">Young men are falling.</h1>
+  </div>
+</div>
 <!--animated welcome code here-->	
 </div>
     
