--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function topFunction() {
 <div class="container">
   <img src="main.jpg">
   <div class="overlay">
-    <h1 class="text-overlay">Young men are falling.</h1>
+    <h1 class="text-overlay typewriter">Young men are falling.</h1>
   </div>
 </div>
 <!--animated welcome code here-->	
