--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function topFunction() {
 <!--beginning of navigation section-->
 <header>
 <div class="nav-container">
-<div class="brand"><img src="img/logo.png" width="190" height="75" alt=""/></div>
+<div class="brand"><img src="img/logo.png" width="70" height="70" alt="" hspace="5"/></div>
 <nav>
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
