--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Societal pressures burden boys to behave a certain way. Instead of accepting the
 <!--end of infographic section-->
 	
 <!--beginning of footer-->
-<footer>Masculinity | San Luis Obispo, CA | <a href="mailto: jgriff26@calpoly.edu?Subject=Inquiry" target="_top">Send Email</a> | Copyright 20__ | Site by Jada Griffith 
+<footer>Masculinity | San Luis Obispo, CA | <a href="mailto: jgriff26@calpoly.edu?Subject=Inquiry" target="_top">Send Email</a> | Copyright 2023 | Site by Jada Griffith 
 </footer>
 <!--end of footer-->
 	
