--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ function topFunction() {
    <div class="table">
 	<div id="trip">
 <audio id="audio_1">
-    <source src="audio/1.mp3" type="audio/mpeg" />
+    <source src="audio/1.mp3" type="audio/mpeg">
 </audio>        
 <audio id="audio_2">
-    <source src="audio/2.mp3" type="audio/mpeg" />
+    <source src="audio/2.mp3" type="audio/mpeg">
 </audio>        
 <audio id="audio_3">
-	<source src="audio/3.mp3" type="audio/mpeg" />
+	<source src="audio/3.mp3" type="audio/mpeg">
 </audio>
         
 <img src="img/rollover/1.gif" class="rollover" alt="description" onMouseOver="this.src='img/rollover/1.jpg'" onMouseOut="this.src='img/rollover/1.gif'" onClick="document.getElementById('audio_1').play(); return false;" onDblClick="document.getElementById('audio_1').pause(); return false;">
