--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ data-cycle-speed="200">
 <!--beginning of slideshow caption-->
 <div id="alt-caption" class="center">
 </div><!--end of slideshow caption-->
-<p class="tab"><a href="#tl">Navigation</a></p>
+<p class="tab"><a href="#tl">Data</a></p>
 </article><!--end of article-->
 </div><!--end of row-->
 <!--end of slideshow section-->
