--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@ function topFunction() {
 </div>
 <!--end of audio section-->
 
+<!--beginning of parallax image-->
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
+</div>
+<!--end of parallax image-->
+
 <!--beginning of video section-->
 <div class="row orangeBG">
 <h2 id="vid">It's never too late to define masculinity for yourself.</h2>
