--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ function topFunction() {
 <!--end of audio section-->
 
 <!--beginning of parallax image-->
-<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax1.jpg">
 </div>
 <!--end of parallax image-->
 
@@ -215,6 +215,11 @@ Your browser does not support the video tag.
 </article>
 </div>
 <!--end of video section-->
+
+<!--beginning of parallax image-->
+<div class="parallax" data-parallax="scroll" data-bleed="10" data-speed="0.2" iosFix="true" data-image-src="img/parallax.jpg">
+</div>
+<!--end of parallax image-->
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
