--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ data-cycle-pause-on-hover="true"
 data-cycle-speed="200">
 <div class="cycle-prev"></div>
 <div class="cycle-next"></div>
-<img src="img/1.jpg" width="100%" height="100%" alt="caption"/>
+<img src="img/1.jpg" width="100%" height="100%" alt="Computer science sophomore Tymon Vu sits at a bus stop outside of his apartment in Poly Canyon Village on Cal Poly’s campus on April 25, 2023. “I don’t like to express my emotions. I don’t want people to think I’m vulnerable or easy to be manipulated. When I’m alone I definitely let my emotions run wild.” - Vu. Boys are taught in our society to conceal and never to feel. Many boys and men never seek the mental health treatment they need simply because they are told to always be strong and to never cry."/>
 <img src="img/2.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/3.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/4.jpg" width="100%" height="100%" alt="caption"/>
