--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@ Your browser does not support the video tag.
 
 <!--beginning of slideshow section-->
 <div class="row blueBG"><!--beginning of row-->
-<h2 id="gal">Heading</h2>
+<h2 id="gal">Redefining Masculinity</h2>
 <article><!--beginning of article-->
-<p class="tab">Blurb</p>
+<p class="tab">Here are how some Boys at Cal Poly are Definining Masculinity for Themselves</p>
 <!--beginning of slideshow-->
 <div id="slider"
 data-cycle-caption="#alt-caption"
@@ -236,7 +236,7 @@ data-cycle-speed="200">
 <div class="cycle-prev"></div>
 <div class="cycle-next"></div>
 <img src="img/1.jpg" width="100%" height="100%" alt="Computer science sophomore Tymon Vu sits at a bus stop outside of his apartment in Poly Canyon Village on Cal Poly’s campus on April 25, 2023. “I don’t like to express my emotions. I don’t want people to think I’m vulnerable or easy to be manipulated. When I’m alone I definitely let my emotions run wild.” - Vu. Boys are taught in our society to conceal and never to feel. Many boys and men never seek the mental health treatment they need simply because they are told to always be strong and to never cry."/>
-<img src="img/2.jpg" width="100%" height="100%" alt="caption"/>
+<img src="img/2.jpg" width="100%" height="100%" alt="Vu reached for a basketball hoop outside of his apartment in PCV on campus on April 25, 2023. “I definitely do say that some kids have bullied me but more for my race because I’m asian. It’s normally the guys and with my race then comes more bullying like ha your short, or ha you can’t see.” - Vu. If a boy does not meet the narrow definition of what it means to be a man they often will become a target of bullying. For example, masculine men are traditionally known as tall and muscular. Starting at an early age, Vu was the subject of bullying. The things other boys would say to him will be carried in his mind for the rest of his life."/>
 <img src="img/3.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/4.jpg" width="100%" height="100%" alt="caption"/>
 <img src="img/5.jpg" width="100%" height="100%" alt="caption"/>
