--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ function topFunction() {
 <source src="img/video.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-<p class="tab"><a href="#num">Video</a></p>
+<p class="tab"><a href="#num">Data</a></p>
 </article>
 </div>
 <!--end of video section-->
