--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ data-cycle-speed="200">
 <!--end of infographic section-->
 	
 <!--beginning of footer-->
-<footer>Masculinity | San Luis Obispo, CA | <a href="mailto: jgriff26@calpoly.edu?Subject=Inquiry" target="_top">Send Email</a> | Copyright 2023 | Site by Jada Griffith 
+<footer>Masculinity | San Luis Obispo, CA | <a href="mailto: jgriff26@calpoly.edu?Subject=Inquiry" target="_top">jgriff26@calpoly.edu</a> | Copyright 2023 | Site by Jada Griffith 
 </footer>
 <!--end of footer-->
 	
