--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Your browser does not support the video tag.
 <div class="row blueBG"><!--beginning of row-->
 <h2 id="gal">Redefining Masculinity</h2>
 <article><!--beginning of article-->
-<p class="tab">Here are how some boys at Cal Poly are definining masculinity for themselves</p>
+<p class="tab">Here are how some boys at Cal Poly are definining masculinity for themselves.</p>
 <!--beginning of slideshow-->
 <div id="slider"
 data-cycle-caption="#alt-caption"
