--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@ function topFunction() {
 	
 <!--beginning of audio section-->
 <div class="row">
-<h1 id="tl">What words affected your perception of what it means to "be a man" growing up?</h1>
+<h1 id="tl">THE POWER OF WORDS</h1>
 <article>
-  <p class="tab">Click on images to hear responses (double-click to pause audio). </p>
+  <p class="tab">Words have the power to affect our behavior and lives. Click on images to hear the words that affected the perception of these Cal Poly students growing up.  (double-click to pause audio). </p>
    <div class="table">
 	<div id="trip">
 <audio id="audio_1">
