--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ function topFunction() {
 <div class="row">
 <h1 id="tl">THE POWER OF WORDS</h1>
 <article>
-  <p class="tab">Words have the power to affect our behavior and lives. Click on images to hear the words that affected the perception of these Cal Poly students growing up.  (double-click to pause audio). </p>
+  <p class="tab">Sticks and stones may break your bones, but words can change your brain. Click on images to hear the words that affected the perception of these Cal Poly students growing up.  (double-click to pause audio). </p>
    <div class="table">
 	<div id="trip">
 <audio id="audio_1">
