--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function topFunction() {
           <a href="#home">Home</a>
         </li>
 	   <li>
-          <a href="#gal">Photos</a>
+          <a href="#gal">Redefining Masculinity</a>
 		  </li>
 	  	<li>
           <a href="#tl">MOS</a>
