--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ function topFunction() {
           <a href="#gal">Redefining Masculinity</a>
 		  </li>
 	  	<li>
-          <a href="#tl">MOS</a>
+          <a href="#tl">The Power of Words</a>
         </li>
         <li>
-          <a href="#vid">Video</a>
+          <a href="#vid">Surmounting Obstacles</a>
 			</li>
       <li>
           <a href="#num">Data</a>
