--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function topFunction() {
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="#home">Home</a>
+          <a href="#home">About</a>
         </li>
 	   <li>
           <a href="#gal">Redefining Masculinity</a>
