--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ function topFunction() {
 /&gt;
 	</div>
 </div>
-<p class="tab"><a href="#vid">Video</a></p>		
+<p class="tab"><a href="#vid">Surmounting Obstacles</a></p>		
 </article>
 </div>
 <!--end of audio section-->
