--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ data-cycle-speed="200">
 <!--beginning of slideshow caption-->
 <div id="alt-caption" class="center">
 </div><!--end of slideshow caption-->
-<p class="tab"><a href="#tl">MOS</a></p>
+<p class="tab"><a href="#tl">MAN ON THE STREET</a></p>
 </article><!--end of article-->
 </div><!--end of row-->
 <!--end of slideshow section-->
